# gamepad_monitor

./: CMakeLists.txt  README.md  gamecontrollerdb.txt  gamepad_manager.cpp  gamepad_manager.hpp  main.cpp  run.sh
.github/workflows/: cmake.yml
